# api-django-pro

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: blank.yml
biblioteca/: settings.py  urls.py
contrib/: env_sampla
livros/: models.py  serializers.py  urls.py  views.py
livros/migrations/: 0001_initial.py
livros/tests/: tests.py
