[tool.poetry]
name = "api-django-pro-1"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
djangorestframework = "^3.15.2"
pytest = "^8.3.5"
flake8 = "^7.1.2"
dj-database-url = "^2.3.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "biblioteca.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest-django = "^4.10.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
